// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Protein sequence with no position and no check 1`] = `
<div
  className="protein-sequence"
>
  
   
  <span
    className="protein-sequence-selected-position"
  >
    
  </span>
   
  ACDE
</div>
`;

exports[`Protein sequence with position and no check 1`] = `
<div
  className="protein-sequence"
>
  AC
   
  <span
    className="protein-sequence-selected-position"
  >
    D
  </span>
   
  E
</div>
`;

exports[`Protein sequence with position and wrong check 1`] = `
<div
  className="protein-sequence"
>
  AC
   
  <span
    className="protein-sequence-selected-position"
  >
    [actual:
    D
     not:
    V
    ]
  </span>
   
  E
</div>
`;

exports[`Protein sequence with position, correct check and replacement 1`] = `
<div
  className="protein-sequence"
>
  AC
   
  <span
    className="protein-sequence-selected-position replacement"
  >
    D
  </span>
  <span
    className="protein-sequence-selected-position"
  >
     &gt; 
    G
  </span>
   
  E
</div>
`;
